# cargo-uniflash

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
scripts/: check.sh  rm42.elf  test.sh
src/: args.rs  board.rs  cargo_build.rs  ccxml.rs  chip.rs  cli.rs  command_exists.rs  common.rs  configuration.rs  confirm_install.rs  connection.rs  download_file.rs  driver.rs  dslite.rs  flash_target.rs  from_str_error.rs  install_uniflash.rs  main.rs  md5_verify.rs  progress.rs  raw_args.rs  read_until_matches.rs  uniflash.rs  warn_experimental_platforms.rs
